Use java 21 and mf with java 21